deps/v8/test/message/fail/new-target-postfix-op.out
*%(basename)s:5: SyntaxError: Invalid left-hand side expression in postfix operation
function f() { new.target++ }
               ^^^^^^^^^^
SyntaxError: Invalid left-hand side expression in postfix operation
